--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
+    <!-- <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
 
@@ -17,5 +17,5 @@
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^ index.php [L] -->
 </IfModule>
